[tool.poetry]
name = "example_cml"
version = "0.1.0"
description = ""
authors = ["Clément Walter <clementw@sicara.com>"]

[tool.poetry.dependencies]
python = "^3.6"
setuptools = "^49.1.0"
sklearn = "^0.0"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
